src/modules/rtp/rtp.h
@@ -34,6 +34,8 @@ typedef struct pa_rtp_context {
     uint8_t payload;
     size_t frame_size;
 
+    uint8_t *recv_buf;
+    size_t recv_buf_size;
     pa_memchunk memchunk;
 } pa_rtp_context;
 
